<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name_here"
                android:inputType="textCapWords" />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/whippedCream"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/checkbox_padding_left"
                android:text="@string/whipped_cream" />

            <CheckBox
                android:id="@+id/chocolate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/checkbox_padding_left"
                android:text="@string/chocolate" />

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginBottom="@dimen/layout_padding"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="@dimen/quantity_buttons_size"
                    android:layout_height="@dimen/quantity_buttons_size"
                    android:onClick="increment"
                    android:text="@string/increment" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/quantity_no_padding"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:layout_width="@dimen/quantity_buttons_size"
                    android:layout_height="@dimen/quantity_buttons_size"
                    android:onClick="decrement"
                    android:text="@string/decrement" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/order_button_bottom"
            android:layout_marginLeft="@dimen/layout_padding"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </RelativeLayout>

</ScrollView>